etape7/deploy-nodejs.yaml
apiVersion: networking.k8s.io/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodongo
        image: zarakmughal/nodejs-starter:1.0
        ports:
        - containerPort: 3000
