etape7/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: my-dashboard.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
        - pathType: Prefix
          path: "/my-app-1"
          backend:
            service:
              name: nodejs1
              port:
                number: 80
        - pathType: Prefix
          path: "/my-app-2"
          backend:
            service:
              name: nodejs2
              port:
                number: 80
